<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".faculdade.materia.EditMateriaActivity">

    <ImageButton
        android:id="@+id/imageVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_voltar" />

    <RelativeLayout
        style="@style/container_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campoTitulo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/nome_da_categoria"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textShortMessage|textCapSentences"
                android:maxLength="25" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonExcluir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/botao"
                android:text="@string/excluir"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="@color/white" />

            <Button
                android:id="@+id/buttonSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/botao"
                android:text="@string/salvar"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>